tests/baselines/reference/destructuringObjectBindingPatternAndAssignment3.errors.txt
destructuringObjectBindingPatternAndAssignment3.ts(2,7): error TS1005: ',' expected.
destructuringObjectBindingPatternAndAssignment3.ts(3,5): error TS2322: Type '{ i: number; }' is not assignable to type 'string | number'.
destructuringObjectBindingPatternAndAssignment3.ts(3,6): error TS2339: Property 'i' does not exist on type 'string | number'.
destructuringObjectBindingPatternAndAssignment3.ts(4,6): error TS2339: Property 'i1' does not exist on type 'string | number | {}'.
destructuringObjectBindingPatternAndAssignment3.ts(5,21): error TS2353: Object literal may only specify known properties, and 'f212' does not exist in type '{ f21: any; }'.
destructuringObjectBindingPatternAndAssignment3.ts(6,7): error TS1005: ':' expected.
destructuringObjectBindingPatternAndAssignment3.ts(6,15): error TS1005: ':' expected.
destructuringObjectBindingPatternAndAssignment3.ts(7,12): error TS1005: ':' expected.


==== destructuringObjectBindingPatternAndAssignment3.ts (8 errors) ====
    // Error
    var {h?} = { h?: 1 };
          ~
!!! error TS1005: ',' expected.
    var {i}: string | number = { i: 2 };
        ~~~
!!! error TS2322: Type '{ i: number; }' is not assignable to type 'string | number'.
         ~
!!! error TS2339: Property 'i' does not exist on type 'string | number'.
    var {i1}: string | number| {} = { i1: 2 };
         ~~
!!! error TS2339: Property 'i1' does not exist on type 'string | number | {}'.
    var { f2: {f21} = { f212: "string" } }: any = undefined;
                        ~~~~
!!! error TS2353: Object literal may only specify known properties, and 'f212' does not exist in type '{ f21: any; }'.
    var {1} = { 1 };
          ~
!!! error TS1005: ':' expected.
                  ~
!!! error TS1005: ':' expected.
    var {"prop"} = { "prop": 1 };
               ~
!!! error TS1005: ':' expected.
    